--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Anatolij-Goga.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://Anatolij-Goga.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
